[package]
name = "f4-peri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifinina = { git = "https://github.com/spookyvision/wifinina-rs.git", features = ["genio-traits"]}
utils = { git = "https://github.com/spookyvision/rust-utils.git" }
embedded-websocket = { version = "0.8", default-features = false }
ws2812-spi = "0.4"
apa102-spi = "0.3.2"
cortex-m = "0.7"
nb = "1"
embedded-hal = "0.2"
fugit = { version = "0.3", features = ["defmt"] }
heapless = "0.7"
numtoa = "0.2"
# 0.6.1 is broken and enforces `std`
sha1 = "=0.6.0"
rtic-monotonic = "1"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
features = ["stm32f411"]

[features]
default = ["spi_alt"]
spi = []
spi_alt = []
